--- a/doc/snippets.tex
+++ b/doc/snippets.tex
@@ -1,6 +1,6 @@
 %!TEX TS-program = pdflatexmk
 
-% Copyright (c) 2018 - 2022, Martin Scheidt (ISC license)
+% Copyright (c) 2018 - 2023, Martin Scheidt (ISC license)
 % Permission to use, copy, modify, and/or distribute this file for any purpose with or without fee is hereby granted, provided that the above copyright notice and this permission notice appear in all copies.
 
 \documentclass[a4paper,landscape]{article}
@@ -476,6 +476,16 @@ No. & Name & Clip & Code & Manual reference\\
 \parbox[c]{4cm}{\centering\texttt{trafficcontrol} \\ Section \ref{sym:berthsign} p. \pageref{sym:berthsign} \\ \& \\ \texttt{measures} \\ Section \ref{sym:trainberth} p. \pageref{sym:trainberth}} \\
 
 %% locations %%
+
+\hline
+\No & trigger point (forward) &
+\symbol{trigger_point_forward.tikz} & \code{trigger_point_forward.tikz} &
+\parbox[c]{4cm}{\centering\texttt{trafficcontrol} \\ Section \ref{sym:triggerpoint} p. \pageref{sym:triggerpoint}} \\
+
+\hline
+\No & trigger point (backward) &
+\symbol{trigger_point_backward.tikz} & \code{trigger_point_backward.tikz} &
+\parbox[c]{4cm}{\centering\texttt{trafficcontrol} \\ Section \ref{sym:triggerpoint} p. \pageref{sym:triggerpoint}} \\
 
 \hline
 \No & view point (forward) &
