--- a/doc/versionhistory.tex
+++ b/doc/versionhistory.tex
@@ -1,7 +1,7 @@
 %!TEX TS-program = pdflatexmk
 %!TEX root = manual.tex
 
-% Copyright (c) 2018 - 2022, Martin Scheidt (ISC license)
+% Copyright (c) 2018 - 2023, Martin Scheidt (ISC license)
 % Permission to use, copy, modify, and/or distribute this file for any purpose with or without fee is hereby granted, provided that the above copyright notice and this permission notice appear in all copies.
 
 \begin{versionhistory}
@@ -41,5 +41,8 @@
   }
   \vhEntry{0.7.1}{2022-06-02}{MS}{
     handeling color background and foreground with native xcolor alias "\textbackslash colorlet{}{}" instead of pgf macro
+  }
+  \vhEntry{0.8.0}{2023-05-05}{MS}{
+    new symbol "trigger point"
   }
 \end{versionhistory}
