--- a/src/tikzlibrarytrackschematic.symbology.code.tex
+++ b/src/tikzlibrarytrackschematic.symbology.code.tex
@@ -1,6 +1,6 @@
 %% symbol library for TikZ track schematics
 %
-% Copyright (c) 2018 - 2022, Martin Scheidt (ISC license)
+% Copyright (c) 2018 - 2023, Martin Scheidt (ISC license)
 %
 % Permission to use, copy, modify, and/or distribute this file for any purpose with or without fee is hereby granted, provided that the above copyright notice and this permission notice appear in all copies.
 %
@@ -87,6 +87,7 @@
     \tsSymbol[1.4]{locked_shunt_signal} & shunt signal locked                               \\%
     \tsSymbol[1.4]{shunt_limit}         & shunt limit                                       \\%
     \tsSymbol[1.4]{train_berth_sign}    & train berth sign                                  \\%
+    \tsSymbol[1.4]{trigger_point}       & trigger point                                     \\%
     \tsSymbol[1.4]{view_point}          & view point                                        \\%
     \tsSymbol[1.4]{braking_point}       & braking point                                     \\%
     \tsSymbol[1.4]{end_of_authority}    & end of movement authority                         \\%
