--- a/test/berth.tex
+++ b/test/berth.tex
@@ -10,16 +10,16 @@
 \begin{document}
   \begin{tikzpicture}
   
-    \foreach \i in {1,2,...,4}{% base coordinate
+    \foreach \i in {1,2,...,5}{% base coordinate
       \coordinate (A\i) at ($(0,0) + 2*(0,-\i)$);% base coordinate
       \coordinate (B\i) at ($(8,0) + 2*(0,-\i)$);% base coordinate
     }
 
-    \foreach \i in {1,2,...,4}{% draw main tracks on base coordinate
+    \foreach \i in {1,2,...,5}{% draw main tracks on base coordinate
       \maintrack (A\i) --   (B\i);
     }
 
-    \foreach \i in {1,2,...,4}{% coordinates for testing symbols
+    \foreach \i in {1,2,...,5}{% coordinates for testing symbols
       \coordinate (X\i-1) at ($(1,0) + 2*(0,-\i)$);
       \coordinate (X\i-2) at ($(3,0) + 2*(0,-\i)$);
       \coordinate (X\i-3) at ($(5,0) + 2*(0,-\i)$);
@@ -28,19 +28,24 @@
 
     \train[backward] at (X1-1) label (X1-1);
 
-    \berth[bidirectional]  at (X1-2) length (X1-2);
+    \berth[bidirectional]        at (X1-2) length (X1-2);
     \berth[forward,length=1.5cm] at (X1-4) length (X1-4-f);
     \berth[backward,length=1cm]  at (X1-4) length (X1-4-b);
 
-    \berth[forward,length=2cm]    at                   (X2-2) length (230);
+    \berth[forward,length=2cm]    at                     (X2-2) length (230);
     \berth[backward,length=1.5cm] at ([shift={(-0.25,0)}] X2-2) length (180);
     \berth[forward,length=1.5cm]  at ([shift={( 0.25,0)}] X2-3) length (50~m);
-    \berth[backward,length=2cm]   at                   (X2-3) length (60~m);
+    \berth[backward,length=2cm]   at                     (X2-3) length (60~m);
 
-    \berth[backward] at (X3-2) length ();
+    \berth[backward]               at (X3-2) length ();
     \berth[position=left,backward] at (X3-3) length ();
-    \berth[forward]  at (X4-2) length ();
+    \berth[forward]                at (X4-2) length ();
     \berth[position=left,forward]  at (X4-3) length ();
+
+    \berth[forward ,position=left, length=1cm] at (X5-2) length (label);
+    \berth[forward ,position=right,length=1cm] at (X5-1) length (label);
+    \berth[backward,position=left, length=1cm] at (X5-4) length (label);
+    \berth[backward,position=right,length=1cm] at (X5-3) length (label);
 
   \end{tikzpicture}
 \end{document}
